add services and Gallery

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
     <!-- Main Start -->
     <main>
+      <!-- Donate Today Section start -->
       <section class="donate-today">
         <h1 class="section-title">Donate Today</h1>
         <p class="section-caption">
@@ -58,6 +59,81 @@
           ducimus beatae dignissimos blanditiis sunt nemo fugit sit veniam at
           qui!
         </p>
+      </section>
+      <!-- Donate Today Section End -->
+
+      <!-- Services Section Start -->
+      <section class="services">
+        <div class="service-criteria-food">
+          <img class="criteria-icon" src="icons/food.png" alt="" />
+          <h2 class="criteria-title">Food for a family</h2>
+          <p class="criteria-caption">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quae
+            ut amet. Voluptate, repellat distinctio.
+          </p>
+        </div>
+        <div class="service-criteria-shelter">
+          <img class="criteria-icon" src="icons/shelter.png" alt="" />
+          <h2 class="criteria-title">Shelter for a family</h2>
+          <p class="criteria-caption">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quae
+            ut amet. Voluptate, repellat distinctio.
+          </p>
+        </div>
+        <div class="service-criteria-edu">
+          <img class="criteria-icon" src="icons/Frame-1.png" alt="" />
+          <h2 class="criteria-title">Education for a child</h2>
+          <p class="criteria-caption">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quae
+            ut amet. Voluptate, repellat distinctio.
+          </p>
+        </div>
+      </section>
+      <!-- Services Section End -->
+
+      <!-- Gallery Section Start -->
+      <section class="donate-gallery">
+        <div class="gallery">
+          <div class="gallery-content">
+            <h1 class="gallery-title">Their lives depend on your donation</h1>
+            <span class="gallery-caption">
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Perspiciatis assumenda quasi accusantium! Dicta, harum atque
+                ipsam quae esse dolore ducimus.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Officiis magni distinctio cumque debitis sed doloremque.
+              </p>
+            </span>
+            <button class="btn-primary">How to Contribute?</button>
+          </div>
+          <div class="gallery-image">
+            <img src="images/donation0.jpg" alt="Donation Image" />
+          </div>
+        </div>
+        <div class="free-space"></div>
+        <div class="gallery">
+          <div class="gallery-image">
+            <img src="images/donation13.jpg" alt="Donation Image" />
+          </div>
+          <div class="gallery-content">
+            <h1 class="gallery-title">They need us to suvive</h1>
+            <span class="gallery-caption">
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Perspiciatis assumenda quasi accusantium! Dicta, harum atque
+                ipsam quae esse dolore ducimus.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Officiis magni distinctio cumque debitis sed doloremque.
+              </p>
+            </span>
+            <button class="btn-primary">How to Contribute?</button>
+          </div>
+        </div>
       </section>
     </main>
     <!-- Main End -->
