added update and footer section

--- a/index.html
+++ b/index.html
@@ -135,7 +135,36 @@
           </div>
         </div>
       </section>
+      <!-- Gallery Section End -->
+
+      <!-- Update Section Start -->
+
+      <section class="update">
+        <h1 class="section-title">Get My Updates</h1>
+        <p class="section-caption">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius eligendi
+          minus qui expedita corrupti eum quas excepturi labore, et unde.
+        </p>
+        <div class="subscription">
+          <div class="area">
+            <input
+              type="email"
+              name="email"
+              id="email-box"
+              placeholder="Your Email"
+            /><button class="btn-primary">Subscribe</button>
+          </div>
+        </div>
+      </section>
+      <!-- Update Section End -->
     </main>
     <!-- Main End -->
+
+    <footer>
+      <div class="footer">
+        <h1>Be Humble</h1>
+        <p>I’m gonna do it</p>
+      </div>
+    </footer>
   </body>
 </html>
